@@ -1,3 +1,4 @@
+	* added feature to not count downloaded bytes from web seeds in stats
 	* added alert for incoming local service discovery messages
 	* added option to set file priorities when adding torrents
 	* removed the session mutex for improved performance
